# Fashion-ERP

./: README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement_proposal.md  feature_request.md  request-a-feature.md
.github/workflows/: ci_cd.yaml  server_cd.yaml  server_ci.yaml
client/: middleware.ts  package-lock.json  package.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/(app)/: layout.tsx
client/app/(app)/dashboard/: page.tsx
client/app/(app)/finance/: page.tsx
client/app/(app)/finance/fixed-charges/: page.tsx
client/app/(app)/finance/payroll/: page.tsx
client/app/(app)/hr/: page.tsx
client/app/(app)/inventory/: page.tsx
client/app/(app)/sales/: page.tsx
client/app/(app)/users/: page.tsx
client/app/(auth)/login/: page.tsx
client/components/charts/: bar-chart.tsx
client/components/layout/: sidebar.tsx  topbar.tsx
client/components/ui/: avatar.tsx  badge.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  select.tsx  table.tsx  tabs.tsx  toast.tsx
client/lib/: api.ts  auth.ts
client/types/: index.ts
docs/: index.html
grafana/: compose.yaml
grafana/configurations/: .env.example
grafana/configurations/grafana/: datasource.yml  grafana.ini
grafana/configurations/loki/: config.yaml
grafana/configurations/prometheus/: prometheus.yaml
prediction-model/: main.py  models.py  pyproject.toml
server/: .gitignore  Dockerfile  compose.yaml  deploy.sh  pom.xml  retriger.txt
server/src/main/resources/: application.yaml  logback-spring.xml
test/: seed.py  seed.sql
(+346 files in other folders)
