[project]
name = "prediction-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "numpy>=2.4.4",
    "pydantic>=2.13.4",
    "timesfm>=1.3.0",
    "torch>=2.11.0",
    "transformers>=5.8.0",
    "uvicorn>=0.46.0",
]
